--- a/src/osbuild-manifests/coreos.osbuild.ppc64le.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.ppc64le.mpp.yaml
@@ -237,7 +237,7 @@ pipelines:
           # defaults in the version of mkfs.ext4 in the build root.
           # This is mostly useful right now because COSA is based
           # on Fedora.
-          mpp-if: osname == 'rhcos'
+          mpp-if: osname in ['rhcos', 'scos']
           then:
             orphan_file: false
             metadata_csum_seed: true
@@ -385,7 +385,7 @@ pipelines:
           # defaults in the version of mkfs.ext4 in the build root.
           # This is mostly useful right now because COSA is based
           # on Fedora.
-          mpp-if: osname == 'rhcos'
+          mpp-if: osname in ['rhcos', 'scos']
           then:
             orphan_file: false
             metadata_csum_seed: true
