osbuild: add a few pieces from previous commits to multiarch manifests
These were missed copy/pastes from d3a4551 and b74e2f9.

--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -6,6 +6,7 @@ mpp-vars:
   container_imgref: $container_imgref
   container_repo: $container_repo
   container_tag: $container_tag
+  extra_kargs: $extra_kargs
   metal_image_size_mb: $metal_image_size_mb
   cloud_image_size_mb: $cloud_image_size_mb
   bios_boot_size_mb: 1
