osbuild/gcp: fix manifest to use disk.raw
The copy/paste from 1d51ca4 didn't account for the fact that the
image filename is renamed to disk.raw for GCP. Fix it and also
add a comment with some context on why the filename differs here
from the others.

--- a/src/osbuild-manifests/platform.gcp.ipp.yaml
+++ b/src/osbuild-manifests/platform.gcp.ipp.yaml
@@ -14,6 +14,8 @@ pipelines:
         options:
           paths:
             - from: input://tree/disk.img
+              # to disk.raw here and not disk.img because the file inside
+              # the tarball needs to have a .raw suffix
               to: tree:///disk.raw
       # Increase the size to the cloud image size
       - type: org.osbuild.truncate
@@ -28,7 +30,7 @@ pipelines:
           disk:
             type: org.osbuild.loopback
             options:
-              filename: disk.img
+              filename: disk.raw
               partscan: true
         mounts:
            - name: root
