--- a/src/osbuild-manifests/platform.hyperv.ipp.yaml
+++ b/src/osbuild-manifests/platform.hyperv.ipp.yaml
@@ -3,6 +3,8 @@
 version: '2'
 pipelines:
   - name: raw-hyperv-image
+    build:
+      mpp-format-string: '{buildroot}'
     stages:
       - type: org.osbuild.copy
         inputs:
@@ -50,6 +52,8 @@ pipelines:
                mpp-format-int: '{image.layout[''boot''].partnum}'
              target: /boot
   - name: hyperv
+    build:
+      mpp-format-string: '{qemu_stage_buildroot}'
     stages:
       - type: org.osbuild.qemu
         inputs:
