osbuild: go back to setting metadata_csum_seed=true
Here we just unconditionally set it because otherwise changing
the filesystem while it is mounted doesn't work and we get errors
like this during startup:

```
[    4.155947] ignition-ostree-firstboot-uuid[918]: /dev/disk/by-label/boot is in use.
```

Anyways, we are going to delete the fallback code there anyway
https://github.com/coreos/fedora-coreos-config/pull/3008
so it's required to be set so let's set it here and then we can
drop this once RHEL has caught up.

--- a/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.x86_64.mpp.yaml
@@ -292,6 +292,11 @@ pipelines:
             mpp-format-string: '{boot_fs_uuid}'
           label:
             mpp-format-string: '{boot_fs_label}'
+          # Set manually the metadata_csum_seed ext4 option otherwise changing the
+          # filesystem UUID while it's mounted doesn't work. Can remove this when
+          # metadata_csum_seed is default in RHEL, which can be checked by looking
+          # in /etc/mke2fs.conf.
+          metadata_csum_seed: true
       - type: org.osbuild.mkfs.xfs
         devices:
           device:
@@ -453,6 +458,11 @@ pipelines:
             mpp-format-string: '{boot_fs_uuid}'
           label:
             mpp-format-string: '{boot_fs_label}'
+          # Set manually the metadata_csum_seed ext4 option otherwise changing the
+          # filesystem UUID while it's mounted doesn't work. Can remove this when
+          # metadata_csum_seed is default in RHEL, which can be checked by looking
+          # in /etc/mke2fs.conf.
+          metadata_csum_seed: true
       - type: org.osbuild.mkfs.xfs
         devices:
           device:
